--- a/package.json
+++ b/package.json
@@ -8,22 +8,28 @@
   "dependencies": {
     "@hookform/resolvers": "^4.0.0",
     "@radix-ui/react-checkbox": "^1.1.1",
+    "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-popover": "^1.1.6",
+    "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-slot": "^1.1.0",
     "@supabase/ssr": "latest",
     "@supabase/supabase-js": "latest",
     "autoprefixer": "10.4.20",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "framer-motion": "^12.4.2",
     "lucide-react": "^0.468.0",
     "next": "latest",
-    "next-themes": "^0.4.3",
+    "next-themes": "^0.4.4",
     "prettier": "^3.3.3",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-hook-form": "^7.54.2",
+    "recharts": "^2.15.1",
+    "sonner": "^2.0.1",
     "zod": "^3.24.2"
   },
   "devDependencies": {
